[package]
name = "rust_core_sensiomotor_functions"
version = "0.0.1"
description = """
The core library for all FEAGI Connectors. Handles translating to and from FEAGI compatible formats
"""
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://www.feagi.org/"

[dependencies]
ndarray = "0.16.1"

[dependencies-dev]

[lib]




